--- a/style.css
+++ b/style.css
@@ -30,6 +30,13 @@ nav {
     right: 6%;
     top: 60px;
     display: none;
+    background-color: rgba(255, 255, 255, 0.2);
+    padding-right: 40px;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.35);
+    border: 1px solid rgba(255, 255, 255, 0.2);
 }
 nav li {
     list-style: none;
